force-app/main/default/objects/Zuora__ZInvoice__c/Zuora__ZInvoice__c.object-meta.xml
<CustomObject>
    <description>Zuora Invoice object. Invoices are bills that you send to customers.</description>
    <label>Invoice</label>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>