force-app/main/default/objects/Zuora__ZInvoice__c/fields/Tech_CodeRejet__c.field-meta.xml
<CustomField>
    <fullName>Tech_CodeRejet__c</fullName>
    <label>Tech_CodeRejet</label>
    <length>10</length>
    <type>Text</type>
</CustomField>