force-app/main/default/objects/Zuora__ZInvoice__c/fields/Tech_CompteurRejet__c.field-meta.xml
<CustomField>
    <fullName>Tech_CompteurRejet__c</fullName>
    <label>Tech_CompteurRejet</label>
    <length>10</length>
    <type>Text</type>
</CustomField>