force-app/main/default/objects/Zuora__ZInvoice__c/fields/Tech_DateRejet__c.field-meta.xml
<CustomField>
    <fullName>Tech_DateRejet__c</fullName>
    <label>Tech_DateRejet</label>
    <type>Date</type>
</CustomField>