force-app/main/default/objects/Zuora__ZInvoice__c/fields/Tech_FlagRejetPaye__c.field-meta.xml
<CustomField>
    <fullName>Tech_FlagRejetPaye__c</fullName>
    <label>Tech_FlagRejetPaye</label>
    <length>10</length>
    <type>Text</type>
</CustomField>