force-app/main/default/objects/Zuora__ZInvoice__c/fields/Tech_TypeRejet__c.field-meta.xml
<CustomField>
    <fullName>Tech_TypeRejet__c</fullName>
    <label>Tech_TypeRejet</label>
    <length>10</length>
    <type>Text</type>
</CustomField>