force-app/main/default/objects/Zuora__ZInvoice__c/fields/Zuora__Age_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Age_Bucket__c</fullName>
    <description>Age Buckets for Aging Reports</description>
    <formula>IF(Zuora__Balance2__c &lt;= 0, NULL,
IF(TODAY() - Zuora__DueDate__c &lt;= 0, &quot;On Time&quot;,
IF(TODAY() - Zuora__DueDate__c &lt;= 30, &quot;1-30&quot;,
IF(TODAY() - Zuora__DueDate__c &lt;= 60, &quot;31-60&quot;,
IF(TODAY() - Zuora__DueDate__c &lt;= 90, &quot;61-90&quot;, &quot;91-&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age Buckets for Aging Reports</inlineHelpText>
    <label>Age Bucket</label>
    <type>Text</type>
</CustomField>